--- a/markup/dev/scss/components/_sub-section.scss
+++ b/markup/dev/scss/components/_sub-section.scss
@@ -23,7 +23,8 @@
   }
 
   .sub-form {
-    z-index: 2;
+    z-index: 1;
+    position: relative;
     display: flex;
     justify-content: space-between;
     max-width: 900px;
