--- a/markup/dev/css/main.css
+++ b/markup/dev/css/main.css
@@ -419,7 +419,7 @@ img {
   clear: both; }
 
 .def-input {
-  padding: 10px 10px 10px 25px;
+  padding: 10px 10px 10px 20px;
   font-size: 16px;
   line-height: 1;
   font-weight: 300;
@@ -488,7 +488,13 @@ p {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
         -ms-flex-pack: center;
-            justify-content: center; }
+            justify-content: center;
+    -webkit-transition: opacity 0.3s linear, -webkit-transform 0.3s linear;
+    transition: opacity 0.3s linear, -webkit-transform 0.3s linear;
+    -o-transition: transform 0.3s linear, opacity 0.3s linear;
+    transition: transform 0.3s linear, opacity 0.3s linear;
+    transition: transform 0.3s linear, opacity 0.3s linear, -webkit-transform 0.3s linear;
+    cursor: pointer; }
     .burger-menu-button:before {
       content: '';
       position: absolute;
@@ -496,7 +502,12 @@ p {
       width: 20px;
       height: 1px;
       background: #fff;
-      display: block; }
+      display: block;
+      -webkit-transition: -webkit-transform 0.3s linear;
+      transition: -webkit-transform 0.3s linear;
+      -o-transition: transform 0.3s linear;
+      transition: transform 0.3s linear;
+      transition: transform 0.3s linear, -webkit-transform 0.3s linear; }
     .burger-menu-button:after {
       content: '';
       position: absolute;
@@ -504,16 +515,121 @@ p {
       height: 1px;
       background: #fff;
       display: block;
-      bottom: 7px; }
+      bottom: 7px;
+      -webkit-transition: -webkit-transform 0.3s linear;
+      transition: -webkit-transform 0.3s linear;
+      -o-transition: transform 0.3s linear;
+      transition: transform 0.3s linear;
+      transition: transform 0.3s linear, -webkit-transform 0.3s linear; }
     .burger-menu-button span {
       display: block;
       width: 20px;
       height: 1px;
       position: absolute;
       background: #fff;
-      -webkit-transition: 0.3s;
-      -o-transition: 0.3s;
-      transition: 0.3s; }
+      -webkit-transition: opacity 0.3s linear;
+      -o-transition: opacity 0.3s linear;
+      transition: opacity 0.3s linear; }
+    .burger-menu-button:hover span {
+      opacity: 0; }
+    .burger-menu-button:hover:after {
+      -webkit-transform: rotate(-45deg);
+          -ms-transform: rotate(-45deg);
+              transform: rotate(-45deg);
+      top: 50%; }
+    .burger-menu-button:hover:before {
+      -webkit-transform: rotate(45deg);
+          -ms-transform: rotate(45deg);
+              transform: rotate(45deg);
+      top: 50%; }
+  .burger-menu .burger-menu-drop {
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    height: 100vh;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-align-self: center;
+        -ms-flex-item-align: center;
+            align-self: center;
+    z-index: 4;
+    -webkit-transform: translateX(100%);
+        -ms-transform: translateX(100%);
+            transform: translateX(100%);
+    visibility: hidden;
+    -webkit-transition: -webkit-transform 0.3s linear;
+    transition: -webkit-transform 0.3s linear;
+    -o-transition: transform 0.3s linear;
+    transition: transform 0.3s linear;
+    transition: transform 0.3s linear, -webkit-transform 0.3s linear; }
+    .burger-menu .burger-menu-drop:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background-color: #3b434c; }
+    .burger-menu .burger-menu-drop .drop-content {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-align-self: center;
+          -ms-flex-item-align: center;
+              align-self: center;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      z-index: 4; }
+      .burger-menu .burger-menu-drop .drop-content .nav-menu {
+        list-style: none;
+        padding: 0px;
+        margin: 0;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        text-align: center;
+        padding-bottom: 115px; }
+        .burger-menu .burger-menu-drop .drop-content .nav-menu:after {
+          content: '';
+          width: 170px;
+          height: 1px;
+          background-color: #f7600e;
+          margin: 55px auto 0 auto; }
+        .burger-menu .burger-menu-drop .drop-content .nav-menu li:not(:last-child) {
+          padding-bottom: 40px; }
+        .burger-menu .burger-menu-drop .drop-content .nav-menu li a {
+          font-size: 35px;
+          color: #fff;
+          font-weight: 600;
+          text-transform: uppercase;
+          text-decoration: none; }
 
 .logo a {
   display: block; }
@@ -540,7 +656,8 @@ p {
     opacity: 0.9; }
 
 .header-inf-block {
-  z-index: 2;
+  z-index: 1;
+  position: relative;
   text-align: center;
   max-width: 750px;
   display: -webkit-box;
@@ -575,7 +692,7 @@ p {
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
-  z-index: 2;
+  z-index: 1;
   text-decoration: none;
   color: #fff;
   border: 2px solid #fff;
@@ -703,7 +820,8 @@ p {
           justify-content: center; }
 
 .sub-form {
-  z-index: 2;
+  z-index: 1;
+  position: relative;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -917,7 +1035,8 @@ p {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    z-index: 2;
+    z-index: 1;
+    position: relative;
     list-style: none;
     padding: 0px;
     margin: 0; }
@@ -1006,11 +1125,12 @@ p {
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
-    z-index: 2;
+    z-index: 1;
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    position: relative; }
     .send-section .send-block-wrapper .content-head {
       text-align: center;
       padding-bottom: 100px;
@@ -1071,34 +1191,35 @@ p {
             -ms-flex-pack: justify;
                 justify-content: space-between;
         width: 100%; }
-        .send-section .send-block-wrapper .send-form-footer .social-ico {
-          list-style: none;
-          padding: 0px;
-          margin: 0;
-          display: -webkit-box;
-          display: -webkit-flex;
-          display: -ms-flexbox;
-          display: flex;
-          -webkit-box-align: center;
-          -webkit-align-items: center;
-              -ms-flex-align: center;
-                  align-items: center; }
-          .send-section .send-block-wrapper .send-form-footer .social-ico li {
-            -webkit-border-radius: 50%;
-                    border-radius: 50%; }
-            .send-section .send-block-wrapper .send-form-footer .social-ico li:not(:first-child) {
-              padding-left: 20px; }
-            .send-section .send-block-wrapper .send-form-footer .social-ico li a {
-              text-decoration: none;
-              background-color: #fff;
-              display: block;
-              font-size: 30px;
-              -webkit-border-radius: 50%;
-                      border-radius: 50%; }
-            .send-section .send-block-wrapper .send-form-footer .social-ico li .dribble {
-              color: #ff72a5; }
-            .send-section .send-block-wrapper .send-form-footer .social-ico li .behance {
-              color: #009bd5; }
+
+.social-ico {
+  list-style: none;
+  padding: 0px;
+  margin: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .social-ico li {
+    -webkit-border-radius: 50%;
+            border-radius: 50%; }
+    .social-ico li:not(:first-child) {
+      padding-left: 20px; }
+    .social-ico li a {
+      text-decoration: none;
+      background-color: #fff;
+      display: block;
+      font-size: 30px;
+      -webkit-border-radius: 50%;
+              border-radius: 50%; }
+    .social-ico li .dribble {
+      color: #ff72a5; }
+    .social-ico li .behance {
+      color: #009bd5; }
 
 @media (max-width: 479px) {
   .send-section .send-block-wrapper .send-form .input-wrapper {
@@ -1183,9 +1304,7 @@ p {
     transition: filter 0.3s linear;
     transition: filter 0.3s linear, -webkit-filter 0.3s linear;
     -webkit-filter: grayscale(100%);
-            filter: grayscale(100%);
-    -webkit-filter: #c4c6c9;
-            filter: #c4c6c9; }
+            filter: grayscale(100%); }
     .user-inf-content .user-info-item a {
       text-decoration: none;
       display: block; }
@@ -1201,11 +1320,10 @@ p {
         -webkit-transform: scale(1.1, 1.1);
             -ms-transform: scale(1.1, 1.1);
                 transform: scale(1.1, 1.1);
-        -webkit-transform-origin: bottom;
-            -ms-transform-origin: bottom;
-                transform-origin: bottom; }
+        -webkit-transform-origin: 50% 100%;
+            -ms-transform-origin: 50% 100%;
+                transform-origin: 50% 100%; }
         .user-inf-content .user-info-item:hover .item-image:after {
-          content: '';
           height: 5px;
           width: 100%;
           position: absolute;
@@ -1243,38 +1361,47 @@ p {
       -webkit-transition: color 0.3s linear;
       -o-transition: color 0.3s linear;
       transition: color 0.3s linear; }
-    .user-inf-content .user-info-item .item-description .soc-icons {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      list-style: none;
-      padding: 0px;
-      margin: 0;
-      -webkit-box-pack: center;
-      -webkit-justify-content: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      padding-bottom: 30px; }
-      .user-inf-content .user-info-item .item-description .soc-icons li {
-        width: inherit; }
-        .user-inf-content .user-info-item .item-description .soc-icons li:not(:last-child) {
-          padding: 0 15px 0 0; }
-        .user-inf-content .user-info-item .item-description .soc-icons li a {
-          text-decoration: none;
-          font-size: 30px; }
-        .user-inf-content .user-info-item .item-description .soc-icons li .icon-facebook {
-          color: #205b9f; }
-        .user-inf-content .user-info-item .item-description .soc-icons li .icon-twitter {
-          color: #00ace3; }
-        .user-inf-content .user-info-item .item-description .soc-icons li .icon-google {
-          color: #ff3921; }
     .user-inf-content .user-info-item .item-description p {
       text-align: center;
       color: #c4c6c9;
       -webkit-transition: color 0.3s linear;
       -o-transition: color 0.3s linear;
       transition: color 0.3s linear; }
+
+.soc-icons {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  padding: 0px;
+  margin: 0;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-bottom: 30px; }
+  .soc-icons li {
+    width: inherit; }
+    .soc-icons li:not(:last-child) {
+      padding: 0 15px 0 0; }
+    .soc-icons li a {
+      text-decoration: none;
+      font-size: 30px;
+      display: block;
+      -webkit-border-radius: 50%;
+              border-radius: 50%;
+      background-color: #fff; }
+    .soc-icons li .icon-facebook {
+      color: #205b9f; }
+    .soc-icons li .icon-twitter {
+      color: #00ace3; }
+    .soc-icons li .icon-google {
+      color: #ff3921; }
+    .soc-icons li .icon-dribble {
+      color: #ff72a5; }
+    .soc-icons li .icon-behance {
+      color: #009bd5; }
 
 @media (max-width: 1023px) {
   .user-inf-content .user-info-item {
