--- a/markup/dev/scss/components/_carousel-section.scss
+++ b/markup/dev/scss/components/_carousel-section.scss
@@ -20,7 +20,8 @@
 
   .carousel-items {
     display: flex;
-    z-index: 2;
+    z-index: 1;
+    position: relative;
     @include lists-reset;
 
     & li {
