--- a/markup/dev/scss/components/_header-inf-block.scss
+++ b/markup/dev/scss/components/_header-inf-block.scss
@@ -1,5 +1,6 @@
 .header-inf-block {
-  z-index: 2;
+  z-index: 1;
+  position: relative;
   text-align: center;
   max-width: 750px;
   display: flex;
@@ -37,7 +38,7 @@
     bottom: 5%;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 2;
+    z-index: 1;
     text-decoration: none;
     color: $white;
     border: 2px solid $white;
