--- a/markup/dev/scss/main.scss
+++ b/markup/dev/scss/main.scss
@@ -17,10 +17,10 @@
 // components 
 @import 'components/burger-menu';
 @import 'components/logo';
-@import 'components/header-inf';
-@import 'components/header-inf-block';
+@import 'components/info-section';
+@import 'components/info-section-content';
 @import 'components/company-specs';
-@import 'components/sub-section';
+@import 'components/form-section';
 @import 'components/company-products';
 @import 'components/carousel-section';
 @import 'components/send-section';
