--- a/markup/dev/scss/base/_forms.scss
+++ b/markup/dev/scss/base/_forms.scss
@@ -1,16 +1,21 @@
-.def-input {
-  padding: $form-input-padding;
-  font-size: $form-input-font-size;
-  line-height: $form-input-line-height;
-  font-weight: $form-input-font-weight;
-  border-radius: $form-input-border-radius;
-  width: $form-input-width;
-  outline: none;
-  font-family: 'Lato';
-  border: none;
+form {
 
-  &:focus {
-    box-shadow: 0 0 0px 1px $orange;
-    transition: $forms-base-transition;
+  input, textarea {
+    padding: $form-input-padding;
+    font-size: $form-input-font-size;
+    line-height: $form-input-line-height;
+    font-weight: $form-input-font-weight;
+    border-radius: $form-input-border-radius;
+    width: $form-input-width;
+    outline: none;
+    font-family: 'Lato';
+    border: none;
+
+    &:focus {
+      box-shadow: 0 0 0px 1px $orange;
+      transition: $forms-base-transition;
+    }
+
   }
+
 }
