--- a/markup/dev/scss/components/_burger-menu.scss
+++ b/markup/dev/scss/components/_burger-menu.scss
@@ -1,6 +1,7 @@
 .burger-menu {
   display: flex;
   align-items: center;
+  cursor: pointer;
 
   &-name {
     color: $white;
@@ -14,8 +15,7 @@
     height: 30px;
     position: relative;
     justify-content: center;
-    transition: transform 0.3s linear, opacity 0.3s linear;
-    cursor: pointer;
+    transition: $base-tf-animate, $base-opc-animate;
 
     &:before {
         content: '';
@@ -25,7 +25,7 @@
         height: 1px;
         background: $white;
         display: block;
-        transition: transform 0.3s linear;
+        transition: $base-tf-animate;
       }
 
       &:after {
@@ -36,7 +36,7 @@
         background: $white;
         display: block;
         bottom: 7px;
-        transition: transform 0.3s linear;
+        transition: $base-tf-animate;
       }
 
     & span {
@@ -45,29 +45,30 @@
       height: 1px;
       position: absolute;
       background: $white;
-      transition: opacity 0.3s linear;
+      transition: $base-opc-animate, $base-vs-animate;
     }
 
-    &:hover {
+  }
 
-      & span {
-        opacity: 0;
-      }
+  &:hover &-button {
 
-      &:after {
-        transform: rotate(-45deg);
-        top: 50%;
-
-      }
-
-      &:before {
-        transform: rotate(45deg);
-        top: 50%;
-
-      }
-      
+    & .button-icon {
+      opacity: 0;
+      visibility: hidden;
     }
 
+    &:after {
+      transform: rotate(-45deg);
+      top: 50%;
+
+    }
+
+    &:before {
+      transform: rotate(45deg);
+      top: 50%;
+
+    }
+    
   }
 
   .burger-menu-drop {
@@ -84,7 +85,8 @@
     z-index: 4;
     transform: translateX(100%);
     visibility: hidden;
-    transition: transform 0.3s linear;
+    transition: $base-tf-animate;
+    cursor: default;
 
     &:after {
       content: '';
@@ -126,7 +128,6 @@
 
           a {
             font-size: 35px;
-            color: $white;
             font-weight: 600;
             text-transform: uppercase;
             text-decoration: none;
