--- a/markup/dev/scss/components/_company-products.scss
+++ b/markup/dev/scss/components/_company-products.scss
@@ -1,5 +1,5 @@
 .company-products {
-  padding: 100px 0;
+  padding:0 0 100px;
 }
 
 .products-block-wrapper {
@@ -7,12 +7,6 @@
   align-items: center;
 
   .content-head {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 470px;
-    margin: 0 auto;
-    text-align: center;
     padding-bottom: 85px;
 
     h2 {
@@ -71,7 +65,7 @@
         text-align: center;
         opacity: 0;
         visibility: hidden;
-        transition: opacity 0.3s linear, visibility 0.3s linear,;
+        transition: $base-opc-animate, $base-vs-animate;
         border-radius: 10px;
         z-index: 2;
         cursor: pointer;
