--- a/markup/dev/scss/components/_company-specs.scss
+++ b/markup/dev/scss/components/_company-specs.scss
@@ -7,18 +7,18 @@
   justify-content: space-between;
   flex-wrap: wrap;
   @include lists-reset;
+  margin: 0 -30px;
+  padding: 0 0 100px 0;
 
   & li {
     display: flex;
     flex-direction: column;
     text-align: center;
-    width: 18%;
+    width: 25%;
     align-items: center;
-    padding: 0 15px 15px 15px;
+    padding: 0 30px 15px 30px;
 
     .image-wrapper {
-      border: 1px solid #c6c8ca;
-      border-radius: 50%;
       margin: 0 0 30px;
       width: 150px;
       height: 150px;
@@ -29,6 +29,14 @@
         justify-content: center;
         align-items: center;
         width: 100%;
+        border: 1px solid #c6c8ca;
+        border-radius: 50%;
+
+        &:hover {
+          border-color: $orange;
+          transition: $base-brd-clr-animate;
+        }
+
       }
 
     }
@@ -57,7 +65,8 @@
 @include media("<phone") {
 
   .list-items li {
-    padding: 0 0 15px 0;
+    width: 100%;
+    padding: 0 30px 15px 30px;
   }
 
 }
