--- a/markup/dev/scss/components/_info-section-content.scss
+++ b/markup/dev/scss/components/_info-section-content.scss
@@ -1,4 +1,4 @@
-.header-inf-block {
+.info-section-content {
   z-index: 1;
   position: relative;
   text-align: center;
@@ -6,11 +6,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-
-  h1 {
-    font-size: 70px;
-    font-weight: 900;
-  }
 
   p {
     color: #fff;
@@ -33,27 +28,6 @@
 
 }
 
-.header-anchor {
-    position: absolute;
-    bottom: 5%;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
-    text-decoration: none;
-    color: $white;
-    border: 2px solid $white;
-    border-radius: 50%;
-    padding: 6px;
-    font-size: 14px;
-    transition: color 0.3s linear, border-color 0.3s linear;
-
-    &:hover {
-      color: $orange;
-      border-color: $orange;
-    }
-
-  }
-
 @include media("<tablet") {
 
     .header-inf-block  {
@@ -72,10 +46,10 @@
 
 @include media("<tablet") {
 
-    .header-inf-block  {
+    .info-section-content  {
 
     h1 {
-      font-size: 28px;
+      font-size: 36px;
     }
 
     p {
@@ -86,9 +60,25 @@
 
 }
 
+@include media("<phone") {
+
+  .info-section-content  {
+
+  h1 {
+    font-size: 28px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+
+}
+
+}
+
 @include media("<xs-phone") {
 
-    .header-inf-block .buttons-block button {
+    .info-section-content .buttons-block button {
       width: 45%;
     }
 
