--- a/markup/dev/scss/layouts/_footer.scss
+++ b/markup/dev/scss/layouts/_footer.scss
@@ -1,24 +1,17 @@
 .footer {
   background: #3b434c;
   padding: 45px 0;
+  color: $white;
+  text-transform: uppercase;
 
   &-wrapper {
-    display: flex;
     justify-content: space-between;
     align-items: baseline;
 
-    span {
-      color: $white;
-      text-transform: uppercase;
-    }
-
       a {
-        text-transform: uppercase;
-        color: $white;
-        text-decoration: none;
         padding-left: 5px;
         font-weight: 600;
-        transition: color 0.3s linear;
+        @include animate;
 
         &:hover {
           color: $orange;
