--- a/markup/dev/scss/base/_buttons.scss
+++ b/markup/dev/scss/base/_buttons.scss
@@ -11,11 +11,11 @@
   max-width: 100%;
   width: 100%;
   padding: 15px 0;
-  transition: $base-bg-clr-animate, $base-brd-clr-animate, $base-clr-animate;
   background: none;
   cursor: pointer;
   outline: none;
   text-transform: uppercase;
+  @include animate(color border-color background-color);
 
   &:hover {
     background-color: $orange;
@@ -42,14 +42,16 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 1;
-  text-decoration: none;
-  color: $white;
   border: 2px solid $white;
   border-radius: 50%;
-  padding: 6px;
   font-size: 14px;
-  transition: $base-clr-animate, $base-brd-clr-animate;
-  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  @include animate(border-color color);
+
+  i {
+    @include vertical-align-el;
+  }
 
   &:hover {
     color: $orange;
