--- a/markup/dev/scss/base/_forms.scss
+++ b/markup/dev/scss/base/_forms.scss
@@ -1,5 +1,3 @@
-form {
-
   input, textarea {
     padding: $form-input-padding;
     font-size: $form-input-font-size;
@@ -9,13 +7,18 @@ form {
     width: $form-input-width;
     outline: none;
     font-family: 'Lato';
-    border: none;
+    border: 1px solid transparent;
+    @include animate(border-color);
 
     &:focus {
-      box-shadow: 0 0 0px 1px $orange;
-      transition: $forms-base-transition;
+      border: 1px solid $orange;
     }
 
   }
 
-}
+  textarea {
+    width: 100% !important;
+    overflow:  auto;
+    height: 100% !important;
+    resize: none;
+  }
