--- a/markup/dev/scss/components/_company-specs.scss
+++ b/markup/dev/scss/components/_company-specs.scss
@@ -6,11 +6,11 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  @include lists-reset;
   margin: 0 -30px;
-  padding: 0 0 100px 0;
+  padding: 0 0 100px;
+  @extend %listreset;
 
-  & li {
+  li {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -22,21 +22,18 @@
       margin: 0 0 30px;
       width: 150px;
       height: 150px;
-      display: flex;
+      display: block;
+      border: 1px solid #c6c8ca;
+      position: relative;
+      border-radius: 50%;
+      @include animate(border-color);
 
-      & a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        border: 1px solid #c6c8ca;
-        border-radius: 50%;
+      &:hover {
+        border-color: $orange;
+      }
 
-        &:hover {
-          border-color: $orange;
-          transition: $base-brd-clr-animate;
-        }
-
+      img {
+        @include vertical-align-el;
       }
 
     }
