--- a/markup/dev/scss/components/_info-section-content.scss
+++ b/markup/dev/scss/components/_info-section-content.scss
@@ -1,3 +1,23 @@
+.info-section {
+  height: 100vh;
+  position: relative;
+  display: flex;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: #444a52;
+    opacity: 0.9;
+  }
+}
+
 .info-section-content {
   z-index: 1;
   position: relative;
