--- a/markup/dev/scss/components/_prof-section.scss
+++ b/markup/dev/scss/components/_prof-section.scss
@@ -20,7 +20,7 @@
 
   .carousel-pg {
     display: flex;
-    @include lists-reset;
+    @extend %listreset;
 
     li:not(:last-child) {
       padding-right: 10px;
@@ -34,7 +34,7 @@
         height: 10px;
         background-color: #c4c6c9;
         border-radius: 50%;
-        transition: $base-bg-clr-animate, $base-tf-animate;;
+        @include animate(background-color transform);
 
         &:hover {
           background-color: $orange;
@@ -51,15 +51,14 @@
 
 .user-inf-content {
   display: flex;
-  @include lists-reset;
   width: 100%;
   flex-wrap: wrap;
   padding-bottom: 100px;
+  @extend %listreset;
 
   .user-info-item {
     width: 25%;
     padding: 0 15px 15px 15px;
-    transition: $base-flt-animate;
 
     a {
       text-decoration: none;
@@ -72,6 +71,7 @@
         transform: scale(1.1);
         transform-origin: bottom;
         filter: initial;
+        @include animate(filter transform);
 
         &:after {
           content: '';
@@ -80,6 +80,7 @@
           position: absolute;
           bottom: 15px;
           border-radius: 10px;
+          @include animate(border border-color);
         }
 
       }
@@ -92,10 +93,12 @@
 
         h3 {
           color: $black;
+          @include animate(color);
         }
 
         p {
           color: $black;
+          @include animate(color);
         }
 
       }
@@ -105,7 +108,6 @@
     .item-image {
       width: 100%;
       padding-bottom: 15px;
-      transition: $base-tf-animate, $base-bg-clr-animate, $base-flt-animate;
       position: relative;
       filter: grayscale(100%);
 
@@ -124,21 +126,21 @@
         font-weight: $h3-weight;
         text-align: center;
         color: #c4c6c9;
-        transition: $base-clr-animate;
+        @include animate(color);
       }
 
       p {
         text-align: center;
         color: #c4c6c9;
-        transition: $base-clr-animate;
         font-size: 14px;
+        @include animate(color);
       }
 
     }
 
     .soc-icons {
       filter: grayscale(100%);
-      transition: $base-flt-animate;
+      @include animate(filter color background-color);
     }
 
   }
@@ -147,9 +149,9 @@
 
 .soc-icons {
   display: flex;
-  @include lists-reset;
   justify-content: center;
   padding-bottom: 30px;
+  @extend %listreset;
 
   li {
     width: inherit;
