--- a/markup/dev/scss/components/_send-section.scss
+++ b/markup/dev/scss/components/_send-section.scss
@@ -46,6 +46,7 @@
         display: flex;
         justify-content: space-between;
         width: 100%;
+        align-items: center;
 
         &:not(:last-child) {
           padding-bottom: 30px;
@@ -95,40 +96,11 @@
 
   }
 
-}
-
-.social-ico {
-  @include lists-reset;
-  display: flex;
-  align-items: center;
-
-  & li {
-    border-radius: 50%;
-
-    &:not(:first-child) {
-      padding-left: 20px;
-    }
-
-    & a {
-      text-decoration: none;
-      background-color: $white;
-      display: block;
-      font-size: 30px;
-      border-radius: 50%;
-    }
-
-    .dribble {
-      color: #ff72a5;
-    }
-
-    .behance {
-      color: #009bd5;
-    }
-
+  .soc-icons {
+    padding: 0;
   }
 
 }
-
 
 @include media("<xs-phone") {
 
